--- a/index.html
+++ b/index.html
@@ -452,16 +452,15 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>
-                        Sóc la Laura, una professional apassionada per la transformació digital i la innovació tecnològica.
-                        Crec fermament que la tecnologia ha de ser una eina al servei de les persones i les organitzacions.
+                        Sóc la Laura, una professional amb una alta curiositat i amb la voluntat de buscar una millora continua.
+                        Crec fermament que la tecnologia ha de ser una eina al servei de les persones i les organitzacions, que ens pot ser més eficients i acostar-nos als nostres objectius.
                     </p>
                     <p>
-                        Amb anys d'experiència en el sector, he tingut l'oportunitat d'acompanyar empreses i equips
-                        en el seu procés de digitalització, sempre amb un enfocament humà i pràctic.
+                        Amb anys d'experiència en el sector, he tingut l'oportunitat d'acompanyar organitzacions i equips
+                        en el seu procés de digitalització, sempre amb un enfocament que té en compte l'equip humà, els usuaris i la missió.
                     </p>
                     <p>
-                        El meu objectiu és fer que la tecnologia sigui accessible i útil, ajudant a construir
-                        solucions que realment marquin la diferència.
+                        El meu objectiu és aliniar la tecnologia a les persones, la cultura i els objectius de l'organització. Alhora que ens permet dotar-nos de dades per a poder prendre decisions de forma molt més estratègica.
                     </p>
                 </div>
                 <div class="about-image">
@@ -515,14 +514,14 @@
                 <div class="contact-info">
                     <p>
                         Tens un projecte en ment o vols saber com puc ajudar-te?
-                        M'encantarà escoltar-te i explorar com podem treballar junts.
+                        M'encantarà escoltar-te i explorar la nostra col·laboració
                     </p>
                     <div class="contact-details">
                         <div class="contact-item">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 01-2.25 2.25h-15a2.25 2.25 0 01-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25m19.5 0v.243a2.25 2.25 0 01-1.07 1.916l-7.5 4.615a2.25 2.25 0 01-2.36 0L3.32 8.91a2.25 2.25 0 01-1.07-1.916V6.75" />
                             </svg>
-                            <span>hola@laura.cat</span>
+                            <span>lauragas[at]gmail.com</span>
                         </div>
                         <div class="contact-item">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
