--- a/index.html
+++ b/index.html
@@ -39,48 +39,61 @@
         nav {
             position: fixed;
             top: 0;
-            width: 100%;
-            background: var(--white);
-            padding: 1.25rem 0;
+            left: 0;
+            right: 0;
+            background: var(--green-primary);
+            padding: 3.5rem 4rem;
             z-index: 1000;
-            border-bottom: 1px solid var(--grey-light);
-        }
-
-        .nav-container {
-            max-width: 1100px;
-            margin: 0 auto;
-            padding: 0 2rem;
             display: flex;
             justify-content: space-between;
             align-items: center;
+            box-shadow: 0 2px 20px rgba(45, 122, 95, 0.3);
         }
 
         .logo {
             font-weight: 600;
-            font-size: 1.25rem;
-            color: var(--grey-dark);
+            font-size: 1.75rem;
+            color: var(--white);
         }
 
         .logo span {
-            color: var(--green-primary);
+            color: var(--green-light);
         }
 
         .nav-links {
             display: flex;
-            gap: 2.5rem;
+            gap: 3rem;
             list-style: none;
         }
 
         .nav-links a {
             text-decoration: none;
-            color: var(--grey-text);
-            font-weight: 400;
-            font-size: 0.95rem;
+            color: rgba(255, 255, 255, 0.8);
+            font-weight: 500;
+            font-size: 1.1rem;
             transition: color 0.3s ease;
+            position: relative;
         }
 
-        .nav-links a:hover {
-            color: var(--green-primary);
+        .nav-links a:hover,
+        .nav-links a.active {
+            color: var(--white);
+        }
+
+        .nav-links a::after {
+            content: '';
+            position: absolute;
+            bottom: -6px;
+            left: 0;
+            width: 0;
+            height: 3px;
+            background: var(--white);
+            transition: width 0.3s ease;
+        }
+
+        .nav-links a:hover::after,
+        .nav-links a.active::after {
+            width: 100%;
         }
 
         /* Hero Section */
@@ -88,7 +101,7 @@
             min-height: 100vh;
             display: flex;
             align-items: center;
-            padding: 6rem 2rem 4rem;
+            padding: 10rem 2rem 4rem;
             background: var(--white);
         }
 
@@ -377,8 +390,24 @@
 
         /* Mobile Responsive */
         @media (max-width: 768px) {
+            nav {
+                padding: 2rem 2rem;
+            }
+
             .nav-links {
                 gap: 1.5rem;
+            }
+
+            .nav-links a {
+                font-size: 1rem;
+            }
+
+            .logo {
+                font-size: 1.5rem;
+            }
+
+            .hero {
+                padding-top: 9rem;
             }
 
             .hero h1 {
@@ -409,28 +438,28 @@
         }
 
         @media (max-width: 480px) {
-            .nav-container {
+            nav {
                 flex-direction: column;
-                gap: 1rem;
+                gap: 1.5rem;
+                padding: 1.5rem;
             }
 
             .hero h1 {
                 font-size: 2rem;
             }
         }
+
     </style>
 </head>
 <body>
     <!-- Navigation -->
     <nav>
-        <div class="nav-container">
-            <div class="logo">Laura<span>.</span></div>
-            <ul class="nav-links">
-                <li><a href="#qui-soc">Qui sóc</a></li>
-                <li><a href="#que-se-fer">Què sé fer</a></li>
-                <li><a href="#contacte">Contacte</a></li>
-            </ul>
-        </div>
+        <div class="logo">Laura<span>.</span></div>
+        <ul class="nav-links">
+            <li><a href="#qui-soc">Qui sóc</a></li>
+            <li><a href="#que-se-fer">Què sé fer</a></li>
+            <li><a href="#contacte">Contacte</a></li>
+        </ul>
     </nav>
 
     <!-- Hero Section -->
